# sp500-pattern-matcher

./: .gitignore  README.md  project-charter.md
backend/: README.md  pyproject.toml
backend/app/: data.py  main.py  match.py  models.py  nlp.py  routes.py  tsmining.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page-client.tsx  page.tsx
frontend/components/: chart.tsx  forward-returns.tsx  prompt-bar.tsx  theme-provider.tsx
frontend/hooks/: use-historic.ts  use-match.ts
frontend/lib/: api.ts
my-app/: package.json  pnpm-lock.yaml
